--- a/E.StringEx/E.StringEx.csproj
+++ b/E.StringEx/E.StringEx.csproj
@@ -5,11 +5,15 @@
     <Description>string  extensions</Description>
     <Authors>玩双截棍的熊猫</Authors>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.0</Version>   
+    <Version>1.0.3</Version>   
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|netstandard1.6|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard1.6\E.StringEx.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard1.6|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.6\E.StringEx.xml</DocumentationFile>
   </PropertyGroup>
 
 </Project>
